--- a/plan_de_charge_frontend/src/index.html
+++ b/plan_de_charge_frontend/src/index.html
@@ -10,7 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap"
       rel="stylesheet"
     />
-  </head>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
   <body>
     <app-root></app-root>
   </body>
